src/objects/License_History_Tracking__c.object
<CustomObject>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>License_Operation__c</fullName>
        <label>License Operation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>LicenseDetail__c</referenceTo>
        <relationshipLabel>License History Tracking</relationshipLabel>
        <relationshipName>License_History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>License_History_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>License History Tracking</label>
    <nameField>
        <label>License History Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>License History Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>